apps/media/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
spec:
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:latest
        imagePullPolicy: Always
        securityContext:
          privileged: true
        ports:
        - containerPort: 8096
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /config
        - mountPath: /data/media
          name: data
          subPath: media
        - name: transcode
          mountPath: /transcode
        - name: cache
          mountPath: /cache
        - name: dev-dri
          mountPath: /dev/dri
      volumes:
      - name: config
        persistentVolumeClaim: 
          claimName: jellyfin-config
      - name: data
        persistentVolumeClaim: 
          claimName: media-data
      - name: transcode
        emptyDir:
          sizeLimit: 50Gi
      - name: cache
        emptyDir:
          medium: Memory
          sizeLimit: 2Gi
      - name: dev-dri
        hostPath:
          path: /dev/dri
